# fw-insight

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py  storage.py
api/routes/: analysis.py  diff.py  export.py  sessions.py  upload.py
api/tests/: test_routes.py
cli/: main.py  output.py
cli/commands/: analyze.py  diff.py  export.py  report.py  serve.py
core/: __init__.py  constants.py  diff.py  ip_utils.py  models.py  normalizer.py
core/analysis/: __init__.py  engine.py  findings.py  registry.py
core/analysis/checks/: __init__.py  any_any.py  internet_exposure.py  large_cidr.py  logging.py  redundancy.py  shadowing.py
core/tests/: test_analysis_checks.py  test_analysis_engine.py  test_diff.py  test_ip_utils.py  test_models.py  test_normalizer.py
docs/: adding-a-check.md  adding-a-vendor.md  architecture.md  cli-reference.md  schema.md
parsers/: __init__.py  base.py
parsers/cisco_asa/: __init__.py  normalizer.py  parser.py
parsers/cisco_asa/tests/: test_cisco_asa.py
parsers/fortinet/: __init__.py  normalizer.py  parser.py
parsers/fortinet/tests/: test_fortinet.py  test_parser.py
parsers/paloalto/: __init__.py  normalizer.py  parser.py
parsers/paloalto/tests/: test_paloalto.py  test_parser.py
report/: __init__.py  generator.py  styles.css
scripts/: seed_fixtures.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts
web/src/components/: ConfigViewer.tsx  FindingBadge.tsx  Layout.tsx  PolicyTable.tsx  (+2 more)
(+19 files in other folders)
